force-app/main/default/objects/Sales_History__c/Sales_History__c.object-meta.xml
<CustomObject>
    <label>상담이력</label>
    <nameField>
        <label>상담 이력 제목</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>상담이력</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>