force-app/main/default/objects/Sales_History__c/fields/Consulting_Date__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Date__c</fullName>
    <label>상담 일자</label>
    <required>true</required>
    <type>Date</type>
</CustomField>