force-app/main/default/objects/Sales_History__c/fields/Consulting_Details__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Details__c</fullName>
    <label>상담 내용</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>