force-app/main/default/objects/Sales_History__c/fields/Consulting_Flagship_Store__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Flagship_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>플래그십 스토어</label>
    <referenceTo>Flagship_Store__c</referenceTo>
    <relationshipLabel>상담이력</relationshipLabel>
    <relationshipName>Consulting_Flagship_StoreDnbZ</relationshipName>
    <type>Lookup</type>
</CustomField>