force-app/main/default/objects/Sales_History__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Histories</relationshipLabel>
    <relationshipName>Sales_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>