force-app/main/default/objects/Sales_History__c/fields/Sales_History_Opp__c.field-meta.xml
<CustomField>
    <fullName>Sales_History_Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>관련 기회</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>상담이력</relationshipLabel>
    <relationshipName>Sales_History_Opp_qfDl</relationshipName>
    <type>Lookup</type>
</CustomField>