force-app/main/default/objects/Sales_History__c/fields/Store_CRM_Motors__c.field-meta.xml
<CustomField>
    <fullName>Store_CRM_Motors__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Store CRM Motors</label>
    <referenceTo>Store_CRM_Motors__c</referenceTo>
    <relationshipLabel>Sales Histories</relationshipLabel>
    <relationshipName>Sales_Histories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>